Supprimer les composants non utilisés. Intégration des variables de langues pour le texte.

--- a/src/themes/calypso/assets/i18n/fr.json5
+++ b/src/themes/calypso/assets/i18n/fr.json5
@@ -1,5 +1,8 @@
 {
   // "repository.title.prefix": "DSpace Angular :: ",
   "repository.title.prefix": "Calypso :: ",
+  "calypso.onglet-fichier": "Fichiers",
+  "calypso.onglet-notice": "Notice complète",
+  "calypso.onglet-autre": "Autres"
 
 }
