Début de l'intégration de l'API CLIP dans l'interface de recherche.

--- a/src/themes/calypso/assets/i18n/fr.json5
+++ b/src/themes/calypso/assets/i18n/fr.json5
@@ -3,6 +3,10 @@
   "repository.title.prefix": "Calypso :: ",
   "calypso.onglet-fichier": "Fichiers",
   "calypso.onglet-notice": "Notice complète",
-  "calypso.onglet-autre": "Autres"
+  "calypso.clip-titre": "Effectuer une recherche avec IA",
+  "calypso.clip-explication": "Explication ...",
+  "calypso.clip-annuler": "Annuler",
+  "calypso.clip-lien": "Commencer",
+
 
 }
