Intégration de la fonctionnalité de recherche avec des images similaires.

--- a/src/themes/calypso/assets/i18n/fr.json5
+++ b/src/themes/calypso/assets/i18n/fr.json5
@@ -7,6 +7,9 @@
   "calypso.clip-explication": "Explication ...",
   "calypso.clip-annuler": "Annuler",
   "calypso.clip-lien": "Commencer",
+  "calypso.return": "Retour",
+  "calypso.clip-search-title": "",
+  "calypso.clip-search-description": ""
 
 
 }
