--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "ts-node": "10.2.1"
   },
   "dependencies": {
+    "@4eyes/mirador-ocr-helper": "^2.0.5",
     "@angular/animations": "^15.2.8",
     "@angular/cdk": "^15.2.8",
     "@angular/common": "^15.2.8",
@@ -67,6 +68,8 @@
     "@angular/platform-server": "^15.2.8",
     "@angular/router": "^15.2.8",
     "@babel/runtime": "7.21.0",
+    "@blueprintjs/core": "^5.10.0",
+    "@blueprintjs/icons": "^5.8.0",
     "@kolkov/ngx-gallery": "^2.0.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.11.3",
