#Amiliorer la recherche en utilisant le premier bitstream du bundle ORIGINAL d'un ITEM comme référence pour trouver des images similaires dans la collection CLIP.

--- a/src/themes/calypso/assets/i18n/fr.json5
+++ b/src/themes/calypso/assets/i18n/fr.json5
@@ -3,13 +3,16 @@
   "repository.title.prefix": "Calypso :: ",
   "calypso.onglet-fichier": "Fichiers",
   "calypso.onglet-notice": "Notice complète",
+  "calypso.return": "Retour",
+  "calypso.consulter": "Consulter",
   "calypso.clip-titre": "Effectuer une recherche avec IA",
   "calypso.clip-explication": "Explication ...",
   "calypso.clip-annuler": "Annuler",
   "calypso.clip-lien": "Commencer",
-  "calypso.return": "Retour",
   "calypso.clip-search-title": "",
-  "calypso.clip-search-description": ""
+  "calypso.clip-search-description": "",
+  "calypso.clip-charger": "Charger plus",
+  "calypso.clip-img-selection": "Image sélectionnée"
 
 
 }
