Page statique "Droits", créée à partir du contenu de la page actuelle dans Calypso. Le contenu de cette page est placé dans un fichier .json dans le dossier /assets/bibdata.

--- a/src/themes/calypso/assets/i18n/fr.json5
+++ b/src/themes/calypso/assets/i18n/fr.json5
@@ -32,5 +32,10 @@
   "faq": {
     "titre": "FAQ - Vos Questions, Nos Réponses",
     "description": "Trouvez rapidement les informations essentielles pour mieux naviguer sur notre site",
+  },
+
+  "droits": {
+    "titre": "Droit d'auteur et utilisation",
+    "description": "Avis sur l'utilisation du contenu des collections d'objets numériques",
   }
 }
