--- a/src/themes/calypso/assets/i18n/fr.json5
+++ b/src/themes/calypso/assets/i18n/fr.json5
@@ -29,6 +29,8 @@
   "calypso.contact-libraries": "Libraries",
   "calypso.contact-udem": "University of Montreal",
 
+  "calypso.accueil.vedette.titre": "Découvrez Nos Meilleures Publications",
+  "calypso.accueil.vedette.description": "Plongez dans notre sélection exclusive d'articles en vedette, soigneusement choisis pour vous offrir le meilleur de notre contenu.",
   "calypso.faq.titre": "FAQ - Vos Questions, Nos Réponses",
 
   "calypso.faq.description": "Trouvez rapidement les informations essentielles pour mieux naviguer sur notre site",
