--- a/src/assets/i18n/fr.json5
+++ b/src/assets/i18n/fr.json5
@@ -6426,6 +6426,10 @@
   "calypso.droits.titre": "Droit d'auteur et utilisation",
 
   "calypso.droits.description": "Avis sur l'utilisation du contenu des collections d'objets numériques",
+
+  "calypso.accueil.vedette.titre": "Découvrez Nos Meilleures Publications",
+
+  "calypso.accueil.vedette.description": "Plongez dans notre sélection exclusive d'articles en vedette, soigneusement choisis pour vous offrir le meilleur de notre contenu.",
 }
 
 
