--- a/src/themes/calypso/assets/i18n/fr.json5
+++ b/src/themes/calypso/assets/i18n/fr.json5
@@ -29,13 +29,28 @@
   "calypso.contact-libraries": "Libraries",
   "calypso.contact-udem": "University of Montreal",
 
-  "calypso.accueil.vedette.titre": "Découvrez Nos Meilleures Publications",
+  "calypso.accueil.vedette.titre": "Découvrez nos meilleures publications",
+
   "calypso.accueil.vedette.description": "Plongez dans notre sélection exclusive d'articles en vedette, soigneusement choisis pour vous offrir le meilleur de notre contenu.",
+
   "calypso.faq.titre": "FAQ - Vos Questions, Nos Réponses",
 
   "calypso.faq.description": "Trouvez rapidement les informations essentielles pour mieux naviguer sur notre site",
 
   "calypso.droits.titre": "Droit d'auteur et utilisation",
 
-  "calypso.droits.description": "Avis sur l'utilisation du contenu des collections d'objets numériques"
+  "calypso.droits.description": "Avis sur l'utilisation du contenu des collections d'objets numériques",
+
+  //footer
+  "calypso.footer.bibliotheque": "FAQ - Vos Questions, Nos Réponses",
+  "calypso.footer.contact.titre": "FAQ - Vos Questions, Nos Réponses",
+  "calypso.footer.contact.ecrire": "Nous joindre",
+  "calypso.footer.infos.titre": "FAQ - Vos Questions, Nos Réponses",
+  "calypso.footer.infos.a_propos": "À propos",
+  "calypso.footer.infos.a_propos.description": "FAQ - Vos Questions, Nos Réponses",
+  "calypso.footer.liens.confidentialite": "Politique de confidentialité",
+  "calypso.footer.liens.accord_utilisateur": "Conditions d'utilisation de l'UdeM",
+  "calypso.footer.dspace.copyright": "Logiciel DSpace copyright © 2002-",
+  "calypso.footer.liens.lyrasis": "LYRASIS ",
+  "calypso.footer.copyright": "FAQ - Vos Questions, Nos Réponses"
 }
