Optimisation du code pour l'affichage du carousel et corrections sur le scss pour les ecrans petites

--- a/src/assets/i18n/fr.json5
+++ b/src/assets/i18n/fr.json5
@@ -6421,7 +6421,7 @@
 
   "calypso.accueil.vedette.titre": "Découvrez nos meilleures publications",
 
-  "calypso.accueil.vedette.description": "Découvrez notre collection exclusive d'articles en vedette, méticuleusement sélectionnés pour vous offrir le meilleur de notre contenu. Chaque article a été choisi avec soin afin de vous proposer une expérience enrichissante et captivante, reflétant notre engagement à vous présenter des informations de qualité et des perspectives uniques. Explorez ces pièces maîtresses qui incarnent l'essence de notre travail et laissent une empreinte durable dans votre esprit.",
+  "calypso.accueil.vedette.description": "Découvrez notre collection exclusive d'articles en vedette, méticuleusement sélectionnés pour vous offrir le meilleur de notre contenu. Chaque article a été choisi avec soin afin de vous proposer une expérience enrichissante et captivante, reflétant notre engagement à vous présenter des informations de qualité et des perspectives uniques.",
 
   "calypso.faq.titre": "FAQ - Vos Questions, Nos Réponses",
 
