Ajustements sur la page Collection et Items. Cacher le bouton pour la recherche CLIP

--- a/src/assets/i18n/fr.json5
+++ b/src/assets/i18n/fr.json5
@@ -1223,7 +1223,7 @@
 
   "collection.page.edit": "Éditer cette collection",
 
-  "collection.page.handle": "URI permanent de cette collection",
+  "collection.page.handle": "URI: ",
 
   "collection.page.license": "Licence",
 
@@ -6402,6 +6402,8 @@
   "collspec.ai-content-notification": "Voici un message pour la recherche Ai",
 
   "collspec.page-udem.breadcrumbs": "Lire plus",
+
+  "collspec.voir.plus": "Voir plus",
 
   "collspec.ai-search.breadcrumbs": "Recherche IA",
 
