--- a/src/themes/collspec/assets/i18n/fr.json5
+++ b/src/themes/collspec/assets/i18n/fr.json5
@@ -18,6 +18,7 @@
 
   //variable pour texte dans nav top
   "collspec.page-udem.breadcrumbs": "Lire plus",
+  "collspec.voir.plus": "Voir plus",
   "collspec.ai-search.breadcrumbs": "Recherche IA",
 
   // Contact page
