--- a/package.json
+++ b/package.json
@@ -105,6 +105,8 @@
     "@angular/router": "^18.2.12",
     "@angular/ssr": "^18.2.12",
     "@babel/runtime": "7.26.0",
+    "@blueprintjs/core": "^5.18.0",
+    "@blueprintjs/icons": "^5.21.0",
     "@kolkov/ngx-gallery": "^2.0.1",
     "@ng-bootstrap/ng-bootstrap": "^12.0.0",
     "@ng-dynamic-forms/core": "^16.0.0",
