Corrections sur le style pour les petites écrans et d'autres ajustements minieurs.

--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -6982,7 +6982,5 @@
 
   "collspec.droits.titre": "Copyright and Usage",
 
-  "collspec.droits.description": "Notice on the Use of Digital Object Collection Content"
-
+  "collspec.droits.description": "Notice on the Use of Digital Object Collection Content",
 }
-
