--- a/src/assets/i18n/fr.json5
+++ b/src/assets/i18n/fr.json5
@@ -7229,4 +7229,12 @@
   "collspec.footer.contact.clavarder": "Clavarder avec l'équipe des bibliothèques",
 
   "collspec.accueil.titre": "Les Collections <br> spéciales",
+
+  "collspec.menu.a-propos": "À propos",
+
+  "collspec.menu.guide": "Guide collections",
+
+  "collspec.menu.contact": "Nous joindre",
+
+  "collspec.menu.catalogues": "Catalogues"
 }
