--- a/src/themes/collspec/assets/i18n/fr.json5
+++ b/src/themes/collspec/assets/i18n/fr.json5
@@ -54,4 +54,8 @@
   "collspec.footer.liens.accord_utilisateur": " Condition d’utilisation",
   "collspec.footer.copyright": "© Université de Montréal, {{year}}. Tous droits réservés",
 
+  "collspec.donate.text": "Je donne",
+  "collspec.donate.link": "https://secureca.reseau.umontreal.ca/s/1857/bp18/interior.aspx?sid=1857&gid=2&pgid=418&cid=1063&dids=587.618.619.864&bledit=1&sort=1",
+  "collspec.donate.aria-label": "Faire un don"
+
 }
